Import of KULCHENKO/SOAP-Lite-0.39 from CPAN.
gitpan-cpan-distribution: SOAP-Lite
gitpan-cpan-version:      0.39
gitpan-cpan-path:         KULCHENKO/SOAP-Lite-0.39.tar.gz
gitpan-cpan-author:       KULCHENKO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -74,3 +74,7 @@ Revision history for Perl extension SOAP::Lite.
         + added generic class for server support SOAP::Server
         + added Actor attribute
         + added more examples, documentation and tests (88 for now)
+
+0.39 Sun Oct  8 22:55:20 2000
+        ! fixed incompatibility with Perl 5.005
+        + added interactive Makefile.PL for CPAN installation
