--- a/Changes
+++ b/Changes
@@ -93,7 +93,7 @@ Revision history for Perl extension SOAP::Lite.
 0.41 Tue Oct 31 01:24:51 2000
         ! fixed memory leak on server side
         ! fixed die on absence of HTTP::* modules on server side
-        ! fixed working with keepalive connections (added test with Xmethods)
+        ! fixed working with keep-alive connections (added test with Xmethods)
         + changed autotyping from double to float
         + added support for proxy authorization (thanks to Murray Nesbitt)
         + added TCP client/server implementation
@@ -138,7 +138,7 @@ Revision history for Perl extension SOAP::Lite.
         ! fixed CGI server to work under PerlIS and PerlEx (thanks to Murray Nesbitt)
         + tested publishing API for UDDI::Lite, examples provided
           (thanks to Petr Janata for access to UDDI server and provided help)
-        + added bidirectional TCP client/server, examples and tests provided
+        + added bi-directional TCP client/server, examples and tests provided
         + enabled de/serializer overloading on server side (in addition to client)
         + added optimization for objects-by-reference
         + added ForkingDaemon server implementation (thanks to Peter Fraenkel)
@@ -158,7 +158,7 @@ Revision history for Perl extension SOAP::Lite.
         + added IO server implementation (for pipes, mail handlers, FTP and file processing)
         + added FTP client implementation
         + added global settings, shareable between objects
-        + allowed empty URI and nonprefixed method (documentation included)
+        + allowed empty URI and non-prefixed method (documentation included)
         + added tests for xml, xml with headers, single and multipart MIME
         + updated documentation and added examples
         + more that 300 tests in test suite
@@ -170,7 +170,7 @@ Revision history for Perl extension SOAP::Lite.
         + added COM interface
           single dll (standalone or minimal version, downloadable separately)
           doesn't require ROPE.dll, MSXML.dll or listener.asp
-          tested on Windows 98/2K, and should work on Windows 9x, Me, NT, 2K
+          tested on Windows 98/2K, and should work on Windows 9x/Me/NT/2K
           ASP and daemon server implementations
           examples in VB/VBS, Excel/VBA, JavaScript, Perl and ASP
         + added parsing multipart/form-data
@@ -181,3 +181,21 @@ Revision history for Perl extension SOAP::Lite.
         + allowed multiple ports in WSDL
         + tested object interoperability with Apache SOAP
         + optimized internal functions
+
+0.47 Wed Feb 21 17:11:12 2001
+        ! fixed lack of parameter in MAILTO transport 
+        ! fixed minimal version of COM interface to not require absent modules
+        + added compression for HTTP transport
+        + added mod_soap interface, add SOAP server functionality
+          with couple of lines in .htaccess or httpd.conf file 
+        + added proper serialization of circular multiple references
+        + significantly redesigned handling types and URIs
+          ! incompatibilities with ApacheSOAP clients may occur
+        + added handling PIPE and INT signals in Daemon server implementation
+        + changed return from autodispatched calls:
+          result() in scalar context and paramsall() in list context
+        + redesigned tests and split on core and optional for smooth CPAN installation
+        + added examples for cookie-based authorization
+        + added examples in C# and PerlScript for COM interface
+        + added more documentation for COM interface
+        + updated documentation and added new examples
