--- a/lib/SOAP/Constants.pod
+++ b/lib/SOAP/Constants.pod
@@ -5,7 +5,7 @@
 # SOAP::Lite is free software; you can redistribute it
 # and/or modify it under the same terms as Perl itself.
 #
-# $Id: Constants.pm,v 1.1 2004/10/12 18:47:55 byrnereese Exp $
+# $Id: Constants.pod,v 1.1 2007/10/09 09:41:54 kutterma Exp $
 #
 # ======================================================================
 
