--- a/lib/SOAP/Deserializer.pod
+++ b/lib/SOAP/Deserializer.pod
@@ -4,7 +4,7 @@
 # SOAP::Lite is free software; you can redistribute it
 # and/or modify it under the same terms as Perl itself.
 #
-# $Id: Deserializer.pm,v 1.3 2004/10/17 19:59:04 byrnereese Exp $
+# $Id: Deserializer.pod,v 1.1 2007/10/09 09:41:54 kutterma Exp $
 #
 # ======================================================================
 
