--- a/lib/SOAP/Schema.pod
+++ b/lib/SOAP/Schema.pod
@@ -4,7 +4,7 @@
 # SOAP::Lite is free software; you can redistribute it
 # and/or modify it under the same terms as Perl itself.
 #
-# $Id: Schema.pm,v 1.5 2004/11/14 19:30:49 byrnereese Exp $
+# $Id: Schema.pod,v 1.1 2007/10/09 09:41:54 kutterma Exp $
 #
 # ======================================================================
 
