--- a/lib/SOAP/Serializer.pod
+++ b/lib/SOAP/Serializer.pod
@@ -4,7 +4,7 @@
 # SOAP::Lite is free software; you can redistribute it
 # and/or modify it under the same terms as Perl itself.
 #
-# $Id: Serializer.pm,v 1.2 2004/10/17 05:18:18 byrnereese Exp $
+# $Id: Serializer.pod,v 1.1 2007/10/09 09:41:54 kutterma Exp $
 #
 # ======================================================================
 
