--- a/lib/SOAP/Trace.pod
+++ b/lib/SOAP/Trace.pod
@@ -4,7 +4,7 @@
 # SOAP::Lite is free software; you can redistribute it
 # and/or modify it under the same terms as Perl itself.
 #
-# $Id: Trace.pm,v 1.1 2004/10/12 18:47:55 byrnereese Exp $
+# $Id: Trace.pod,v 1.1 2007/10/09 09:41:55 kutterma Exp $
 #
 # ======================================================================
 
