--- a/lib/SOAP/Utils.pod
+++ b/lib/SOAP/Utils.pod
@@ -4,7 +4,7 @@
 # SOAP::Lite is free software; you can redistribute it
 # and/or modify it under the same terms as Perl itself.
 #
-# $Id: Utils.pm,v 1.1 2004/10/12 18:47:55 byrnereese Exp $
+# $Id: Utils.pod,v 1.1 2007/10/09 09:41:54 kutterma Exp $
 #
 # ======================================================================
 
