--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 #
 # Revision history for Perl extension SOAP::Lite.
 #
-# $Id: Changes,v 1.26 2007/10/15 22:05:36 kutterma Exp $
+# $Id: Changes,v 1.35 2007/11/08 21:01:17 kutterma Exp $
 
 The contents of this file provides a change history for the SOAP::Lite
 Perl module. New features are designated with a '+' and bug fixes with
@@ -15,8 +15,22 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 -----------------------------------------------------------------------
 THIS RELEASE
 -----------------------------------------------------------------------
+0.70_02 
+  ! Fixed  [ 1828412 ] SOAP::Lite serializes faults with wrong element order,
+    thanks to Tom Fischer.
+  ! Fixed [ 1073360 ] Failure to read() long requests under mod_perl (fixed 
+    for mod_perl before thanks to JT Justman, now fixed for CGI, too). 
+  ! Fixed #30339: envelope subroutine() in XMLRPC/Lite.pm incorrectly 
+    requires method parameter for a response envelope
+  ! Fixed #26408: SOAP::Transport::HTTP needs to call extract_cookies when 
+    dealing with a cookie jar
+  ! Fixed #22730 test failure on bleedperl
+  ! Fixed #30271 Don't give strings with utf8 flag set to 
+  	MIME::Base64::encode_base64().
+  ! Fixed [ 1816907 ] t/01_core.t fails on 5.6.x
+  ! Fixed #24810 missing prerequisite LWP::UserAgent
 
-0.69_01
+0.70_01 Oct 18 2007
 
   + Added LOOPBACK test transport backend.
   + Added more core tests
